MyanmarResists/myanRes.css
/* The Modal (background) */


@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,900&display=swap');

/*html, body{min-height:100%;}
body{height:100vh;}*/

body, html {
  height: 100%;
  width: 100%;
  margin: 0;
}

.full-screen-div {
    width: 100vw;
    height: 100%;
    min-height: 100%;
    box-sizing: border-box;
    overflow-x: hidden;
    overflow-y: hidden;
}


.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 80%;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s
}

/* Add Animation */
@-webkit-keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

@keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

/* The Close Button */
.closeModal {
    color: white;
    float: right;
	font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif; font-size: 2vh; font-style: italic; font-variant: normal; font-weight: 900; 
	margin: 5px;
	cursor: pointer;
}

.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

.modal-header {
    padding: 2px 16px;
    background-color: #b33234;
    color: white;
}

.modal-body {padding: 2px 16px;}

.modal-footer {
    padding: 2px 16px;
    background-color: #b33234;
    color: white;
}
	
	#map {height: 82vh;
		margin: 0 auto 0 auto;	
		}
	body {background-color: #b33234;}
	
	path {cursor: pointer;}
	
	*, *:before, *:after {
	box-sizing: border-box;
}

p {
font-family: 'Roboto', sans-serif;
}

   /*Use for highlighter effect. wrap text like so: This Highlight is in the Heading */

   
.highlight {
  position: relative;
}

.highlight:before, 
.highlight:after {
  content: " ";
  display: block;
  height: 110%;
  width: 110%;
  margin-left: -5%;
  margin-right: -5%;
  position: absolute;
  transform: skew(-15deg);
}
.highlight:before {
  background: white;
  z-index:-100;
}
 .highlight {
  color: black;
  z-index: 1;
}
   
#titleText {
font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif; font-size: 4.5vh; font-style: italic; font-variant: normal; font-weight: 900; line-height: 1;margin:2vh auto 2vh auto; text-align: center;

}   

#district-name {
position: absolute;
  bottom: 19vh;
  left: 25%;
}   

.captionText {
  font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif; font-size: 3vh; font-style: italic; font-variant: normal; font-weight: 900;
  }

.subTitles{
  font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif;  font-size: 2.5vh; font-style: italic; font-variant: normal; font-weight: 900; text-align:center;
  }

	
/*	#map{
    height: 100%;
    width: 100%;
    background-color: orange;*/
}

/*  Make the SVG canvas fill its container - both initially and after resizing */
svg { height: 100%; width: 100%; }

.textBox {
background-color: white;
width: 100%;
  padding: 10px;
  box-shadow: 5px 5px;
  max-height: 80vh;
  overflow:auto;
}

.fancybox-bg {
    background: #1e1e1e;
	}

.bulletPoints {
  list-style-type: square;
}	

#subHead {
position: absolute;
  top: 1vh;
  left: 2vw;
  right: 50%;
  color: white;
  font-style: italic;
  font-family: Arial Black, 'Roboto', Arial Bold, Gadget, sans-serif; 
  max-width: 250px
}

.mobLink {
font-family: 'Roboto', Arial Bold, Gadget, sans-serif; font-size: 1em; font-variant: normal; font-weight: 900; color:#b33234;text-decoration: underline; font-style: italic;

}

.moblinkHightlight {
background-color: white;
height: 5vh;
width: 80%;
transform: skewX(-16deg);
box-shadow: 5px 5px;
}

 /* unvisited link */
a:link {
  color: #e83337;
}

/* visited link */
a:visited {
  color: #e83337;
}

/* mouse over link */
a:hover {
  color: #b33234;
}

/* selected link */
a:active {
  color: #e83337;
} 

.modalTitles {
margin: 5px auto 5px auto
}



@media screen and (min-width: 992px) {
    #map {height:90vh}
	.container {
    max-width: 1100px;}

}

@media screen and (max-width: 500px) {
.moblinkHightlight {width:90%}
.mobLink {font-size: 3.8vw;}
}

@media screen and (max-width: 430px) {
	#subHead {font-size:0.7rem;}
	#titleText {font-size:9vw}
}

/* No greater than 900px, no less than 400px */
@media (max-width:992px) and (min-width:768px) {
    #subHead {left:14vw;}
}​

